# PROYECTO-FINAL-CONTROL-BALANCIN-PROYECTO-BUENO-YA-FINAL

./: .gitignore  README.md
BalancinESP32_Clean/: README.md
BalancinESP32_Clean/firmware/: CMakeLists.txt  sdkconfig.defaults
BalancinESP32_Clean/firmware/main/: CMakeLists.txt  main.c
BalancinESP32_Clean/notes/: control_roadmap.md  test_log.md
BalancinESP32_Clean/theory/: ARDUINOCODE.c  Parametros_Sintonia_clas (1).m  README.md
BalancinESP32_FreeRTOS/: CMakeLists.txt  README.md
BalancinESP32_FreeRTOS/components/balancin_control/: CMakeLists.txt  balancin_control.c
BalancinESP32_FreeRTOS/components/board/: CMakeLists.txt
BalancinESP32_FreeRTOS/components/encoder_quad/: CMakeLists.txt  encoder_quad.c
BalancinESP32_FreeRTOS/components/line_adc/: CMakeLists.txt  line_adc.c
BalancinESP32_FreeRTOS/components/motor_l298n/: CMakeLists.txt  motor_l298n.c
BalancinESP32_FreeRTOS/components/mpu6050/: CMakeLists.txt  mpu6050.c
BalancinESP32_FreeRTOS/components/wifi_sta_udp/: CMakeLists.txt  wifi_sta_udp.c
BalancinESP32_FreeRTOS/components/wifi_tcp/: CMakeLists.txt  wifi_tcp.c
BalancinESP32_FreeRTOS/main/: CMakeLists.txt  main.c
BalancinESP32_Pruebas/: CMakeLists.txt  README.md  sdkconfig.defaults
BalancinESP32_Pruebas/main/: CMakeLists.txt  main.c
BalancinESP32_Pruebas/tools/: gui_pruebas.py  monitor_pruebas.py
Two-wheeled-inverted-pendulum-main/: .gitignore  CMakeLists.txt  LICENSE  README.md
Two-wheeled-inverted-pendulum-main/components/motor/: motor.c  (+1 more)
Two-wheeled-inverted-pendulum-main/main/: CMakeLists.txt  embedded.c
monitor/: monitor.py
(+40 files in other folders)
