idf_component_register(
    SRCS "main.c"
    INCLUDE_DIRS "."
    REQUIRES
        esp_adc
        esp_driver_gpio
        esp_driver_i2c
        esp_driver_ledc
        esp_driver_pcnt
        esp_driver_uart
        esp_timer
        esp_wifi
        esp_http_server
        nvs_flash
        esp_netif
        esp_event
)
